[project]
name = "movies-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=4.0.0",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.12",
    "polars>=1.32.0",
    "transformers>=4.54.1",
]
